# Animation-Magic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
VS2019_solution/: Animation-Magic.sln  Animation-Magic.vcxproj  Animation-Magic.vcxproj.filters
Xcode_Project/Animation Experiments/Animation Experiments.xcodeproj/: project.pbxproj
dependencies/GLFW/GLFW/lib/mac/: lglfw.3.dylib
dependencies/cgltf/cgltf/: cgltf.c
dependencies/glad/glad/: glad.c  glad.h
dependencies/imgui/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
dependencies/stb_image/stb_image/: stb_image.cpp
inc/: AnimatedMesh.h  Camera3.h  Clip.h  Frame.h  GLTFLoader.h  Interpolation.h  ModelViewerState.h  Pose.h  RearrangeBones.h  Skeleton.h  SkeletonViewer.h  Track.h  TrackVisualizer.h  Transform.h  TransformTrack.h  finite_state_machine.h  game.h  quat.h  resource_manager.h  shader.h  shader_loader.h  state.h  texture.h  window.h
public/: Animation-Experiments.js  Animation-Experiments.wasm  Animation-Magic-UI.js  Animation-Magic.js  Animation-Magic.wasm  index.html
resources/models/animals/: stag.glb
resources/models/man/: man.glb
resources/models/mechs/: george.glb  leela.glb  mike.glb  stan.glb
resources/models/pistol/: pistol.glb  pistol.gltf
resources/models/table/: wooden_floor.glb  wooden_floor.gltf
resources/models/woman/: woman.glb
resources/models/zombie/: zombie.glb
resources/shaders/: ambient_diffuse_illumination.frag  animated_mesh_with_pregenerated_skin_matrices.vert  bone.frag  bone.vert  diffuse_illumination.frag  graph.frag  graph.vert  joint.frag  joint.vert  static_mesh.vert
src/: AnimatedMesh.cpp  Camera3.cpp  Clip.cpp  GLTFLoader.cpp  ModelViewerState.cpp  Pose.cpp  RearrangeBones.cpp  Skeleton.cpp  SkeletonViewer.cpp  Track.cpp  TrackVisualizer.cpp  Transform.cpp  TransformTrack.cpp  finite_state_machine.cpp  game.cpp  main.cpp  quat.cpp  shader.cpp  shader_loader.cpp  texture.cpp  texture_loader.cpp  window.cpp
unused_resources/scenes/: catwalk.max  platform.max  terrain_geometry.max  terrain_geometry_water.max  terrain_material.max
